--- a/src/main/resources/pages/homePage.fxml
+++ b/src/main/resources/pages/homePage.fxml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="25.0" styleClass="bodybg" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.ControllerGui">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="25.0" styleClass="bodybg" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.GuiController">
    <children>
       <ImageView fitHeight="216.0" fitWidth="365.0" pickOnBounds="true" preserveRatio="true" VBox.vgrow="ALWAYS">
          <image>
@@ -19,11 +28,24 @@
             <Insets />
          </VBox.margin>
       </ImageView>
-      <TextField prefHeight="26.0" prefWidth="302.0" promptText="insert nickname">
-         <VBox.margin>
-            <Insets left="100.0" right="100.0" />
-         </VBox.margin>
-      </TextField>
+      <VBox alignment="CENTER">
+         <children>
+            <Text fill="#e1ff00" strokeType="OUTSIDE" strokeWidth="0.0" text="insert your nickname" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial" size="24.0" />
+               </font>
+            </Text>
+            <Region maxHeight="10.0" minHeight="10.0" prefHeight="200.0" prefWidth="200.0" />
+            <TextField alignment="BASELINE_LEFT" maxHeight="300.0" maxWidth="300.0" prefHeight="39.0" prefWidth="252.0">
+               <VBox.margin>
+                  <Insets left="100.0" right="100.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Arial" size="24.0" />
+               </font>
+            </TextField>
+         </children>
+      </VBox>
       <Button fx:id="b1" mnemonicParsing="false" onAction="#connectPlayer" text="Connect" textAlignment="JUSTIFY" textFill="#000000bf">
          <font>
             <Font name="Century" size="18.0" />
