--- a/src/main/resources/pages/NumberOfPlayers.fxml
+++ b/src/main/resources/pages/NumberOfPlayers.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
@@ -29,14 +28,7 @@
                </font>
             </Text>
             <Region maxHeight="10.0" minHeight="10.0" prefHeight="200.0" prefWidth="200.0" />
-            <TextField fx:id="numberofplayers" alignment="BASELINE_LEFT" maxHeight="300.0" maxWidth="300.0" prefHeight="0.0" prefWidth="300.0">
-               <VBox.margin>
-                  <Insets left="100.0" right="100.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Arial" size="24.0" />
-               </font>
-            </TextField>
+            <ChoiceBox fx:id="numberofplayers" maxHeight="200.0" maxWidth="200.0" prefWidth="150.0" />
          </children>
       </VBox>
       <Button fx:id="b2" mnemonicParsing="false" onAction="#numberOfPlayers" text="Create Game" textAlignment="JUSTIFY" textFill="#000000bf">
