--- a/src/main/resources/pages/NumberOfPlayers.fxml
+++ b/src/main/resources/pages/NumberOfPlayers.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1024.0" spacing="25.0" styleClass="bodybg" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.GuiController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1024.0" spacing="25.0" styleClass="bodybg" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.GuiControllerNumberOfPlayers">
    <padding>
       <Insets left="100.0" right="100.0" />
    </padding>
@@ -31,7 +31,7 @@
             <ChoiceBox fx:id="numberofplayers" maxHeight="200.0" maxWidth="200.0" prefWidth="150.0" />
          </children>
       </VBox>
-      <Button fx:id="b2" mnemonicParsing="false" onAction="#numberOfPlayers" text="Create Game" textAlignment="JUSTIFY" textFill="#000000bf">
+      <Button fx:id="b" mnemonicParsing="false" onAction="#numberOfPlayers" text="Create Game" textAlignment="JUSTIFY" textFill="#000000bf">
          <font>
             <Font name="Century" size="18.0" />
          </font>
