--- a/src/main/resources/pages/ChooseLeaderCards.fxml
+++ b/src/main/resources/pages/ChooseLeaderCards.fxml
@@ -1,43 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<?import javafx.scene.image.Image?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.GuiControllerLeaderCardChoice">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1024.0" styleClass="bodybg" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.GuiControllerLeaderCardChoice">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choose 2 leader cards:" textAlignment="CENTER" wrappingWidth="600.0">
+      <Text fill="#ffe81e" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose 2 leader cards:" textAlignment="CENTER" wrappingWidth="274.0">
+         <font>
+            <Font name="Roboto Thin" size="24.0" />
+         </font>
          <VBox.margin>
-            <Insets bottom="20.0" top="20.0" />
+            <Insets bottom="20.0" left="375.0" right="375.0" top="20.0" />
          </VBox.margin>
       </Text>
-      <HBox prefHeight="328.0" prefWidth="600.0">
+      <HBox prefHeight="448.0" prefWidth="1024.0" VBox.vgrow="ALWAYS">
          <children>
-            <ImageView fx:id="iv1" fitHeight="300.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="iv1" fitHeight="350.0" fitWidth="200.0" onMousePressed="#selectCard1" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                <HBox.margin>
-                  <Insets bottom="20.0" left="25.0" right="25.0" top="20.0" />
+                  <Insets left="37.0" right="25.0" top="30.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fx:id="iv2" fitHeight="300.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="iv2" fitHeight="350.0" fitWidth="200.0" onMousePressed="#selectCard2" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                <HBox.margin>
-                  <Insets bottom="20.0" left="25.0" right="25.0" top="20.0" />
+                  <Insets left="25.0" right="25.0" top="30.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fx:id="iv3" fitHeight="300.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="iv3" fitHeight="350.0" fitWidth="200.0" onMousePressed="#selectCard3" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                <HBox.margin>
-                  <Insets bottom="20.0" left="25.0" right="25.0" top="20.0" />
+                  <Insets left="25.0" right="25.0" top="30.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fx:id="iv4" fitHeight="300.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="iv4" fitHeight="350.0" fitWidth="200.0" onMousePressed="#selectCard4" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                <HBox.margin>
-                  <Insets bottom="20.0" left="25.0" right="25.0" top="20.0" />
+                  <Insets left="25.0" right="37.0" top="30.0" />
                </HBox.margin>
             </ImageView>
          </children>
       </HBox>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Text fx:id="t1" fill="#ffe81e" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+               <HBox.margin>
+                  <Insets left="37.0" right="25.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="t2" fill="#ffe81e" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+               <HBox.margin>
+                  <Insets left="25.0" right="25.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="t3" fill="#ffe81e" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+               <HBox.margin>
+                  <Insets left="25.0" right="25.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="t4" fill="#ffe81e" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="200.0">
+               <HBox.margin>
+                  <Insets left="25.0" right="37.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+         </children>
+         <VBox.margin>
+            <Insets bottom="25.0" />
+         </VBox.margin>
+      </HBox>
+      <Button fx:id="b" alignment="CENTER" mnemonicParsing="false" onAction="#pickLeaderCards" prefHeight="25.0" prefWidth="224.0" text="Choose" textAlignment="CENTER" VBox.vgrow="ALWAYS">
+         <VBox.margin>
+            <Insets bottom="50.0" left="400.0" right="400.0" top="10.0" />
+         </VBox.margin>
+      </Button>
    </children>
 </VBox>
