Completed Market for GUI.

--- a/src/main/resources/pages/Market.fxml
+++ b/src/main/resources/pages/Market.fxml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="447.0" styleClass="bodybg" stylesheets="@../styles/market.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.GuiControllerMarket">
+   <children>
+       <!--<ImageView fitHeight="576.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
+           <Image url="@../gui_images/market/market.png" />
+       </ImageView>-->
+       <ImageView fx:id="b11" fitHeight="47.0" fitWidth="47.0" layoutX="137.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b12" fitHeight="47.0" fitWidth="47.0" layoutX="184.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b13" fitHeight="47.0" fitWidth="47.0" layoutX="231.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b14" fitHeight="47.0" fitWidth="47.0" layoutX="278.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b21" fitHeight="47.0" fitWidth="47.0" layoutX="137.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b22" fitHeight="47.0" fitWidth="47.0" layoutX="184.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b23" fitHeight="47.0" fitWidth="47.0" layoutX="231.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b24" fitHeight="47.0" fitWidth="47.0" layoutX="278.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b31" fitHeight="47.0" fitWidth="47.0" layoutX="137.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b32" fitHeight="47.0" fitWidth="47.0" layoutX="184.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b33" fitHeight="47.0" fitWidth="47.0" layoutX="231.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="b34" fitHeight="47.0" fitWidth="47.0" layoutX="278.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" />
+       <ImageView fx:id="leftover" fitHeight="47.0" fitWidth="47.0" layoutX="314.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true" />
+    </children>
+ </Pane>
